--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 django = "==1.11"
 django-crispy-forms = "*"
 pillow = "*"
+gunicorn = "*"
+psycopg2-binary = "*"
+pipfile = "*"
 
 [dev-packages]
 
